--- a/index.html
+++ b/index.html
@@ -407,13 +407,11 @@
         </div>
         <div class="content-left">
           <div class="text2">
-            <h1>Aspiring <span class="stndout">FULL STACK</span> Developer</h1>
-            <p class="description">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis
-              tenetur tempora animi similique pariatur illo quaerat explicabo
-              esse dolores amet fuga, dicta natus error deleniti culpa, labore
-              modi praesentium aliquam.
-            </p>
+            <h1>
+              I enjoy people and I try to work
+              <span class="stndout">Consistently</span>
+            </h1>
+            <p class="description"></p>
           </div>
         </div>
         <div class="content-right testimo">
