--- a/index.html
+++ b/index.html
@@ -408,7 +408,7 @@
         <div class="content-left">
           <div class="text2">
             <h1>
-              I enjoy people and I try to work
+              I enjoy working with people and I try to work
               <span class="stndout">Consistently</span>
             </h1>
             <p class="description"></p>
