started with feedback changes

--- a/index.html
+++ b/index.html
@@ -512,8 +512,8 @@
 
         <div class="form-container">
           <h3 class="cnt-form-head">
-            Let's grab a <span class="stndout"> coffee </span> or send me a
-            <span class="stndout">message</span>
+            Let's grab a <span class="stndout mam"> coffee </span> or send me a
+            <span class="stndout mam">message</span>
           </h3>
 
           <form
