--- a/index.html
+++ b/index.html
@@ -72,10 +72,8 @@
           <div>
             <h1>Aspiring <span class="stndout">FULL STACK</span> Developer</h1>
             <p class="description">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis
-              tenetur tempora animi similique pariatur illo quaerat explicabo
-              esse dolores amet fuga, dicta natus error deleniti culpa, labore
-              modi praesentium aliquam.
+              Welcome to my site. Built from the ground up with my blood, sweat and tears (..and coffee).<br>
+              I am Uthmaan and I have been working for the past few months learning how to code.
             </p>
           </div>
           <div class="btn-contain">
@@ -135,10 +133,7 @@
           <div class="text2">
             <h1>Aspiring <span class="stndout">FULL STACK</span> Developer</h1>
             <p class="description">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis
-              tenetur tempora animi similique pariatur illo quaerat explicabo
-              esse dolores amet fuga, dicta natus error deleniti culpa, labore
-              modi praesentium aliquam.
+              I am a diligent and hard-working person with a good-natured and friendly spirit. I work well with others and can work independently as well. I enjoy the outdoors as well as spending time at home. I would consider myself a well-rounded person.
             </p>
           </div>
         </div>
@@ -222,7 +217,7 @@
               />
               <p class="year">2017</p>
               <p class="descr">
-                Did a full-time basic Arabic course at Darun Naim and did well,
+                Did 1 year of a full-time basic Arabic course at Darun Naim and did well,
                 the certificate is only given after the second year of studies
               </p>
             </div>
@@ -278,7 +273,7 @@
     </section>
     <!-- Skills -->
     <section id="skills">
-      <div class="about">
+      <div class="about skilt">
         <div class="page-title2">
           <p class="p-title name">Skills</p>
           <p class="p-title num">4.0</p>
@@ -321,7 +316,7 @@
     </section>
     <!-- Projects -->
     <section id="projects">
-      <div class="about">
+      <div class="about proj">
         <div class="page-title2">
           <p class="p-title name">Projects</p>
           <p class="p-title num">5.0</p>
@@ -339,26 +334,26 @@
               ><i class="fas fa-long-arrow-alt-right"></i
             ></a>
           </div>
-          <div class="dots">
-            <span class="dot" onclick="currentSlide(1)"
+          <ul class="dots">
+            <li class="dot" onclick="currentSlide(1)"
               >Timeline <i class="fas fa-external-link-alt proj-icon"></i
-            ></span>
-            <span class="dot" onclick="currentSlide(2)"
+            ></li>
+            <li class="dot" onclick="currentSlide(2)"
               >Testimonial <i class="fas fa-external-link-alt proj-icon"></i
-            ></span>
-            <span class="dot" onclick="currentSlide(3)"
+            ></li>
+            <li class="dot" onclick="currentSlide(3)"
               >Contact Form <i class="fas fa-external-link-alt proj-icon"></i
-            ></span>
-            <span class="dot" onclick="currentSlide(4)"
+            ></li>
+            <li class="dot" onclick="currentSlide(4)"
               >Project Cards <i class="fas fa-external-link-alt proj-icon"></i
-            ></span>
-            <span class="dot" onclick="currentSlide(5)"
+            ></li>
+            <li class="dot" onclick="currentSlide(5)"
               >project5 <i class="fas fa-external-link-alt proj-icon"></i
-            ></span>
-            <span class="dot sld6" onclick="currentSlide(6)"
+            ></li>
+            <li class="dot sld6" onclick="currentSlide(6)"
               >project6 <i class="fas fa-external-link-alt proj-icon"></i
-            ></span>
-          </div>
+            ></li>
+          </ul>
         </div>
 
         <div class="content-right slide">
@@ -467,12 +462,12 @@
     </section>
     <!-- Contact / footer -->
     <section id="contact">
-      <div class="about">
-        <div class="page-title2">
+      <div class="cnt-grid">
+        <div class="cnt-title2">
           <p class="p-title name">Contact Me</p>
           <p class="p-title num">7.0</p>
         </div>
-        <div class="content-left">
+        <div class="cntct-left">
           <div class="text2">
             <h1><span class="stndout">HIRE</span> ME</h1>
             <p class="description">
@@ -555,6 +550,9 @@
               <i class="fas fa-long-arrow-alt-right"></i>
             </button>
           </form>
+        </div>
+        <div class="footer">
+          <p>Uthmaan Breda<i class="fas fa-microchip"></i></p>
         </div>
       </div>
     </section>
