--- a/index.html
+++ b/index.html
@@ -198,7 +198,8 @@
               <p class="year">2020</p>
               <p class="descr">
                 Studied part time LAW with unisa for 6 months as to continue
-                from the Bcom Law, it was not for me.
+                from the Bcom Law, but unfortunately during lockdown the study material
+                sent wasn't sent on time and i started working.
               </p>
             </div>
             <div class="item">
@@ -206,7 +207,7 @@
               <p class="year">2018</p>
               <p class="descr">
                 Studied full-time for a year Bcom Law at Varsity college, did
-                not complete.
+                not complete due to financial reasons.
               </p>
             </div>
             <div class="item">
@@ -218,7 +219,7 @@
               <p class="year">2017</p>
               <p class="descr">
                 Did 1 year of a full-time basic Arabic course at Darun Naim and did well,
-                the certificate is only given after the second year of studies
+                the certificate is only given after the second year of studies.
               </p>
             </div>
             <div class="item">
@@ -226,7 +227,7 @@
               <p class="year">2013-2015</p>
               <p class="descr">
                 Completed matric at Darul Arqam High School with a Bachelors
-                pass
+                pass.
               </p>
             </div>
             <div class="item">
@@ -244,19 +245,19 @@
               <p class="year">2020-2021</p>
               <p class="descr">
                 Worked as a carpenters apprentice for my dad at Gamia Projects
-                for 7 months.
+                for 7 months, up until i started at Life Choices.
               </p>
             </div>
             <div class="item">
               <img class="logo" src="#" alt="Cuecon" />
               <p class="year">2019</p>
-              <p class="descr">Renovation and Building work with Cuecon.</p>
+              <p class="descr">Renovation and Building work with Cuecon, left when the project ended.</p>
             </div>
             <div class="item">
               <img class="logo" src="#" alt="Gamia" />
               <p class="year">2017-2018</p>
               <p class="descr">
-                Part time Administrative work with Gamia Projects.
+                Part time Administrative work with Gamia Projects, I worked as a casual with my dad
               </p>
             </div>
             <div class="item">
@@ -358,36 +359,32 @@
 
         <div class="content-right slide">
           <div class="slideshow-container">
-            <div class="mySlides fade" style="display: block">
-              <a href="https://naughty-edison-e09493.netlify.app"
-                ><img src="./images/timeline.png" style="width: 100%"
-              /></a>
+            <div class="mySlides fade slide1" style="display:flex;">
+              <a class="btnlnk" href="https://naughty-edison-e09493.netlify.app"
+                >live site</a>
             </div>
 
-            <div class="mySlides fade">
-              <a href="https://keen-ramanujan-cb8943.netlify.app"
-                ><img src="./images/testimonial.png" style="width: 100%"
-              /></a>
+            <div class="mySlides fade slide2">
+              <a class="btnlnk" href="https://keen-ramanujan-cb8943.netlify.app"
+                >live site</a>
             </div>
 
-            <div class="mySlides fade">
-              <a href="https://upbeat-shaw-31e034.netlify.app/"
-                ><img src="./images/contact form.png" style="width: 100%"
-              /></a>
+            <div class="mySlides fade slide3">
+              <a class="btnlnk" href="https://upbeat-shaw-31e034.netlify.app/"
+                >live site</a>
             </div>
 
-            <div class="mySlides fade">
-              <a href="https://vigorous-poitras-6ae56e.netlify.app"
-                ><img src="./images/project-cards.png" style="width: 100%"
-              /></a>
+            <div class="mySlides fade slide4">
+              <a class="btnlnk" href="https://vigorous-poitras-6ae56e.netlify.app"
+                >live site</a>
             </div>
 
-            <div class="mySlides fade">
-              <a href="#"><img src="#" style="width: 100%" /></a>
+            <div class="mySlides fade slide5">
+              <a class="btnlnk" href="#"><img src="#" style="width: 100%" />live site</a>
             </div>
 
-            <div class="mySlides fade">
-              <a href="#"><img src="#" style="width: 100%" /></a>
+            <div class="mySlides fade slide6">
+              <a class="btnlnk" href="#"><img src="#" style="width: 100%" />live site</a>
             </div>
           </div>
         </div>
