--- a/index.html
+++ b/index.html
@@ -54,7 +54,6 @@
         <a class="link" href="#homePage">Home</a>
         <a class="link" href="#about">About</a>
         <a class="link" href="#XP">Education/Experience</a>
-        <a class="link" href="#skills">Skills</a>
         <a class="link" href="#projects">Projects</a>
         <a class="link" href="#testimonials">Testimonials</a>
         <a class="link" href="#contact">Contact</a>
@@ -138,7 +137,27 @@
           </div>
         </div>
 
-        <div class="content-right"></div>
+        <div class="content-right skill-icons">
+          <div class="icon-box">
+            <i class="fab fa-html5 skill-icon tooltip"
+              ><span class="tooltiptext">HTML5</span></i
+            >
+            <i class="fab fa-css3-alt skill-icon tooltip"
+              ><span class="tooltiptext">CSS3</span></i
+            >
+            <i class="fab fa-python skill-icon tooltip"
+              ><span class="tooltiptext">Python</span></i
+            >
+          </div>
+          <div class="icon-box">
+            <i class="fab fa-js-square skill-icon tooltip"
+              ><span class="tooltiptext">Javascript</span></i
+            >
+            <i class="fas fa-users skill-icon tooltip"
+              ><span class="tooltiptext">Teamwork</span></i
+            >
+          </div>
+        </div>
       </div>
     </section>
     <!-- Work & education / Experience -->
@@ -171,10 +190,10 @@
         <div class="content-right XP-list">
           <div class="resbtn">
             <div class="btn-container">
-              <button class="linebtn btn" onclick="changeExperience('edu')">
+              <button class="sw_btn" onclick="changeExperience('edu')">
                 Education
               </button>
-              <button class="linebtn btn" onclick="changeExperience('work')">
+              <button class="sw_btn" onclick="changeExperience('work')">
                 Work
               </button>
             </div>
@@ -199,7 +218,7 @@
               <p class="descr">
                 Studied part time LAW with unisa for 6 months as to continue
                 from the Bcom Law, but unfortunately during lockdown the study material
-                sent wasn't sent on time and i started working.
+                sent wasn't sent on time and I started working.
               </p>
             </div>
             <div class="item">
@@ -272,55 +291,13 @@
         </div>
       </div>
     </section>
-    <!-- Skills -->
-    <section id="skills">
-      <div class="about skilt">
-        <div class="page-title2">
-          <p class="p-title name">Skills</p>
-          <p class="p-title num">4.0</p>
-        </div>
-        <div class="content-left">
-          <div class="text2">
-            <h1>
-              My current <span class="stndout">SKILLS</span> in coding and in
-              general
-            </h1>
-            <p class="description">
-              What you see here is what I know, or of what I am learning. I
-              enjoy leaning new things and perfecting what I have learned.
-            </p>
-          </div>
-        </div>
 
-        <div class="content-right skill-icons">
-          <div class="icon-box">
-            <i class="fab fa-html5 skill-icon tooltip"
-              ><span class="tooltiptext">HTML5</span></i
-            >
-            <i class="fab fa-css3-alt skill-icon tooltip"
-              ><span class="tooltiptext">CSS3</span></i
-            >
-            <i class="fab fa-python skill-icon tooltip"
-              ><span class="tooltiptext">Python</span></i
-            >
-          </div>
-          <div class="icon-box">
-            <i class="fab fa-js-square skill-icon tooltip"
-              ><span class="tooltiptext">Javascript</span></i
-            >
-            <i class="fas fa-users skill-icon tooltip"
-              ><span class="tooltiptext">Teamwork</span></i
-            >
-          </div>
-        </div>
-      </div>
-    </section>
     <!-- Projects -->
     <section id="projects">
       <div class="about proj">
         <div class="page-title2">
           <p class="p-title name">Projects</p>
-          <p class="p-title num">5.0</p>
+          <p class="p-title num">4.0</p>
         </div>
         <div class="content-left proj-content1">
           <div class="text2 proj-text">
@@ -395,7 +372,7 @@
       <div class="about">
         <div class="page-title2">
           <p class="p-title name">Testimonials</p>
-          <p class="p-title num">6.0</p>
+          <p class="p-title num">5.0</p>
         </div>
         <div class="content-left">
           <div class="text2">
@@ -462,7 +439,7 @@
       <div class="cnt-grid">
         <div class="cnt-title2">
           <p class="p-title name">Contact Me</p>
-          <p class="p-title num">7.0</p>
+          <p class="p-title num">6.0</p>
         </div>
         <div class="cntct-left">
           <div class="text2">
