projects_added/responsiveness

--- a/index.html
+++ b/index.html
@@ -132,30 +132,46 @@
           <div class="text2">
             <h1>Aspiring <span class="stndout">FULL STACK</span> Developer</h1>
             <p class="description">
-              I am a diligent and hard-working person with a good-natured and friendly spirit. I work well with others and can work independently as well. I enjoy the outdoors as well as spending time at home. I would consider myself a well-rounded person.
+              I am a diligent and hard-working person with a good-natured and friendly
+              spirit. I work well with others and can work independently as well.
+              I enjoy the outdoors as well as spending time at home. I would consider
+              myself a well-rounded person.
             </p>
           </div>
         </div>
 
         <div class="content-right skill-icons">
-          <div class="icon-box">
-            <i class="fab fa-html5 skill-icon tooltip"
-              ><span class="tooltiptext">HTML5</span></i
-            >
-            <i class="fab fa-css3-alt skill-icon tooltip"
-              ><span class="tooltiptext">CSS3</span></i
-            >
-            <i class="fab fa-python skill-icon tooltip"
-              ><span class="tooltiptext">Python</span></i
-            >
+          <div class="info-cont">
+            <div class="information">
+              <div class="info"><i class="fas fa-birthday-cake"></i><p>September 1996</p></div>
+              <div class="info"><i class="fas fa-mobile-alt"></i><p>079 463 7741</p></div>
+              <div class="info"><i class="fas fa-envelope-open-text"></i><p>uthmaanbreda@gmail.com</p></div>
+            </div>
+            <div class="information">
+              <div class="info"><i class="fas fa-language"></i><p>English / Afrikaans</p></div>
+              <div class="info"><i class="fas fa-location-arrow"></i><p>Cape Town, South Africa</p></div>
+              <div class="info"><i class="fas fa-cogs"></i><p>Aspiring Web Developer</p></div>
+            </div>
           </div>
-          <div class="icon-box">
-            <i class="fab fa-js-square skill-icon tooltip"
-              ><span class="tooltiptext">Javascript</span></i
-            >
-            <i class="fas fa-users skill-icon tooltip"
-              ><span class="tooltiptext">Teamwork</span></i
-            >
+          <div class="skills">
+            <h2 class="head2">Current <span class="stndout">Skills</span></h2>
+            <div class="icon-box">
+              <i class="fab fa-html5 skill-icon tooltip"
+                ><span class="tooltiptext">HTML5</span></i
+              >
+              <i class="fab fa-css3-alt skill-icon tooltip"
+                ><span class="tooltiptext">CSS3</span></i
+              >
+              <i class="fab fa-python skill-icon tooltip"
+                ><span class="tooltiptext">Python</span></i
+              >
+              <i class="fab fa-js-square skill-icon tooltip"
+                ><span class="tooltiptext">Javascript</span></i
+              >
+              <i class="fas fa-users skill-icon tooltip"
+                ><span class="tooltiptext">Teamwork</span></i
+              >
+            </div>
           </div>
         </div>
       </div>
@@ -299,7 +315,7 @@
           <p class="p-title name">Projects</p>
           <p class="p-title num">4.0</p>
         </div>
-        <div class="content-left proj-content1">
+        <div class="proj-content1">
           <div class="text2 proj-text">
             <h1>My <span class="stndout">PROJECTS</span></h1>
             <p class="description">
@@ -307,36 +323,46 @@
             </p>
           </div>
           <div class="descr-btn">
-            <p>here's my github</p>
+            <p>More projects in Github</p>
             <a class="button" href="https://github.com/uthmaanb"
               ><i class="fas fa-long-arrow-alt-right"></i
             ></a>
           </div>
           <ul class="dots">
             <li class="dot" onclick="currentSlide(1)"
-              >Timeline <i class="fas fa-external-link-alt proj-icon"></i
+              >Bmi Calculator <i class="fas fa-external-link-alt proj-icon"></i
             ></li>
-            <li class="dot" onclick="currentSlide(2)"
-              >Testimonial <i class="fas fa-external-link-alt proj-icon"></i
+            <li class="dot sld6" onclick="currentSlide(2)"
+              >Currency Converter <i class="fas fa-external-link-alt proj-icon"></i
             ></li>
             <li class="dot" onclick="currentSlide(3)"
-              >Contact Form <i class="fas fa-external-link-alt proj-icon"></i
+              >Timeline <i class="fas fa-external-link-alt proj-icon"></i
             ></li>
             <li class="dot" onclick="currentSlide(4)"
-              >Project Cards <i class="fas fa-external-link-alt proj-icon"></i
+              >Testimonial <i class="fas fa-external-link-alt proj-icon"></i
             ></li>
             <li class="dot" onclick="currentSlide(5)"
-              >project5 <i class="fas fa-external-link-alt proj-icon"></i
+              >Contact Form <i class="fas fa-external-link-alt proj-icon"></i
             ></li>
-            <li class="dot sld6" onclick="currentSlide(6)"
-              >project6 <i class="fas fa-external-link-alt proj-icon"></i
+            <li class="dot" onclick="currentSlide(6)"
+              >Project Cards <i class="fas fa-external-link-alt proj-icon"></i
             ></li>
           </ul>
         </div>
 
-        <div class="content-right slide">
+        <div class="content-right-proj">
           <div class="slideshow-container">
-            <div class="mySlides fade slide1" style="display:flex;">
+            <div class="mySlides fade slide5" style="display:flex;">
+              <a class="btnlnk" href="https://replit.com/@uthmaanb/BMIcalculator#main.py">
+                live site</a>
+            </div>
+
+            <div class="mySlides fade slide6">
+              <a class="btnlnk" href="https://replit.com/join/sxrfsqlnoa-uthmaanb">
+                live site</a>
+            </div>
+
+            <div class="mySlides fade slide1">
               <a class="btnlnk" href="https://naughty-edison-e09493.netlify.app"
                 >live site</a>
             </div>
@@ -354,14 +380,6 @@
             <div class="mySlides fade slide4">
               <a class="btnlnk" href="https://vigorous-poitras-6ae56e.netlify.app"
                 >live site</a>
-            </div>
-
-            <div class="mySlides fade slide5">
-              <a class="btnlnk" href="#"><img src="#" style="width: 100%" />live site</a>
-            </div>
-
-            <div class="mySlides fade slide6">
-              <a class="btnlnk" href="#"><img src="#" style="width: 100%" />live site</a>
             </div>
           </div>
         </div>
@@ -388,6 +406,54 @@
             <div class="testemonial-text">
               <img
                 class="profile2"
+                src="./images/godwin-dzvapatsra.jpg"
+                alt="image"
+              />
+              <div class="text text4">
+                <h2>Godwin Dzvapatsra</h2>
+                <h3 class="title">-Head of Curriculum and Learning-</h3>
+                <q>
+                  I am delighted to be called upon as a reference for Uthmaan.
+                  He always behaves professionally.
+                </q>
+              </div>
+            </div>
+            <div class="testemonial-text">
+              <img
+                class="profile2"
+                src="./images/candice-amon.png"
+                alt="image"
+              />
+              <div class="text text5">
+                <h2>Candice Amon</h2>
+                <h3 class="title">-Life Choices Academy Facilitator-</h3>
+                <q>
+                  Follows instructions very well.He is a humble and self organised indivdiual.
+                  Possesses a lot of leadership skills. Does not say much and allows his work
+                  to make noise on his behalf.
+                </q>
+              </div>
+            </div>
+            <div class="testemonial-text">
+              <img
+                class="profile2"
+                src="./images/thapelo-tsotetsi.jpg"
+                alt="image"
+              />
+              <div class="text text6">
+                <h2>Thapelo Tsotetsi</h2>
+                <h3 class="title">-Coding Lecturer-</h3>
+                <q>
+                  Uthmaan is an incredible student at Lifechoices Coding Academy. His work ethics
+                  and intellectual skills are amazing. He has a great personality and work well
+                  withing a team. He has a very good communication skill which allows him to ask
+                  the right questions at the right time.
+                </q>
+              </div>
+            </div>
+            <div class="testemonial-text">
+              <img
+                class="profile2"
                 src="./images/Abdul-Malik Mohamed.JPG"
                 alt="image"
               />
@@ -397,6 +463,23 @@
                 <q>
                   Uthmaan is an honest and trustworthy person. Ask him for a
                   hand and he'll give you his arm.
+                </q>
+              </div>
+            </div>
+            <div class="testemonial-text">
+              <img
+                class="profile2"
+                src="./images/C8 Apr21 Aaliyah Jardien (4).JPG"
+                alt="image"
+              />
+              <div class="text text7">
+                <h2>Aaliyah Jardien</h2>
+                <h3 class="title">-Aspiring Full Stack Developer-</h3>
+                <q>
+                  Uthmaan, is a peoples person and enjoys working with others.
+                  He's filled with so much potential and brings it all to the table.
+                  Uthmaan is also someone that's always willing to help others & does an
+                  excellent job.
                 </q>
               </div>
             </div>
