--- a/index.html
+++ b/index.html
@@ -459,7 +459,7 @@
               />
               <div class="text text1">
                 <h2>Abdul-Malik</h2>
-                <h3 class="title">-Full Stack Developer-</h3>
+                <h3 class="title">-Aspiring Developer-</h3>
                 <q>
                   Uthmaan is an honest and trustworthy person. Ask him for a
                   hand and he'll give you his arm.
@@ -474,7 +474,7 @@
               />
               <div class="text text7">
                 <h2>Aaliyah Jardien</h2>
-                <h3 class="title">-Aspiring Full Stack Developer-</h3>
+                <h3 class="title">-Aspiring Developer-</h3>
                 <q>
                   Uthmaan, is a peoples person and enjoys working with others.
                   He's filled with so much potential and brings it all to the table.
@@ -491,7 +491,7 @@
               />
               <div class="text text2">
                 <h2>Ayyoob Slamdien</h2>
-                <h3 class="title">-His King-</h3>
+                <h3 class="title">-Aspiring Developer-</h3>
                 <q>
                   Uthmaan is a true comrad, a loyal follower and a fine
                   gentleman. I am proud to have him by my side.
