--- a/index.html
+++ b/index.html
@@ -353,32 +353,32 @@
         <div class="content-right-proj">
           <div class="slideshow-container">
             <div class="mySlides fade slide5" style="display:flex;">
-              <a class="btnlnk" href="https://replit.com/@uthmaanb/BMIcalculator#main.py">
+              <a class="btnlnk" href="https://replit.com/@uthmaanb/BMIcalculator#main.py" target=_blank>
                 live site</a>
             </div>
 
             <div class="mySlides fade slide6">
-              <a class="btnlnk" href="https://replit.com/join/sxrfsqlnoa-uthmaanb">
+              <a class="btnlnk" href="https://replit.com/join/sxrfsqlnoa-uthmaanb" target=_blank>
                 live site</a>
             </div>
 
             <div class="mySlides fade slide1">
-              <a class="btnlnk" href="https://naughty-edison-e09493.netlify.app"
+              <a class="btnlnk" href="https://naughty-edison-e09493.netlify.app" target=_blank
                 >live site</a>
             </div>
 
             <div class="mySlides fade slide2">
-              <a class="btnlnk" href="https://keen-ramanujan-cb8943.netlify.app"
+              <a class="btnlnk" href="https://keen-ramanujan-cb8943.netlify.app" target=_blank
                 >live site</a>
             </div>
 
             <div class="mySlides fade slide3">
-              <a class="btnlnk" href="https://upbeat-shaw-31e034.netlify.app/"
+              <a class="btnlnk" href="https://upbeat-shaw-31e034.netlify.app/" target=_blank
                 >live site</a>
             </div>
 
             <div class="mySlides fade slide4">
-              <a class="btnlnk" href="https://vigorous-poitras-6ae56e.netlify.app"
+              <a class="btnlnk" href="https://vigorous-poitras-6ae56e.netlify.app" target=_blank
                 >live site</a>
             </div>
           </div>
