--- a/index.html
+++ b/index.html
@@ -42,11 +42,11 @@
     <nav class="navbar">
       <h3 class="cornerP">P</h3>
       <div class="icons">
-        <a class="icon" href="https://api.whatsapp.com/send?phone=+27794637741"
+        <a class="icon" href="https://api.whatsapp.com/send?phone=+27794637741" target=_blank
           ><i class="fab fa-whatsapp"></i
         ></a>
 
-        <a class="icon" href="mailto:uthmaanbreda@gmail.com"
+        <a class="icon" href="mailto:uthmaanbreda@gmail.com" target=_blank
           ><i class="fas fa-envelope"></i
         ></a>
       </div>
@@ -58,7 +58,7 @@
         <a class="link" href="#testimonials">Testimonials</a>
         <a class="link" href="#contact">Contact</a>
       </ul>
-      <a class="tel" href="tel:+27794637741">+27 79 463 7741</a>
+      <a class="tel" href="tel:+27794637741" target=_blank>+27 79 463 7741</a>
     </nav>
     <!-- Home / Landing -->
     <section>
@@ -535,13 +535,13 @@
             <div class="cnt-box mailer">
               <a
                 class="cnt-me-link"
-                href="https://www.google.co.za/maps/@-34.0233805,18.6294385,14z"
+                href="https://www.google.co.za/maps/@-34.0233805,18.6294385,14z" target=_blank
                 ><i class="fas fa-map-marked-alt fst-icon icon"></i>Cape Town,
                 South Africa</a
               >
             </div>
             <div class="cnt-box">
-              <a class="cnt-me-link" href="mailto:uthmaanbreda@gmail.com"
+              <a class="cnt-me-link" href="mailto:uthmaanbreda@gmail.com" target=_blank
                 ><i class="fas fa-envelope fst-icon icon"></i
                 >uthmaanbreda@gmail.com</a
               >
@@ -549,13 +549,13 @@
             <div class="cnt-box">
               <a
                 class="cnt-me-link"
-                href="https://api.whatsapp.com/send?phone=+27794637741"
+                href="https://api.whatsapp.com/send?phone=+27794637741" target=_blank
                 ><i class="fab fa-whatsapp icon fst-icon icon"></i>079 463
                 7741</a
               >
             </div>
             <div class="cnt-box">
-              <a class="cnt-me-link" href="https://github.com/uthmaanb"
+              <a class="cnt-me-link" href="https://github.com/uthmaanb" target=_blank
                 ><i class="fab fa-github fst-icon icon"></i>Github Profile</a
               >
             </div>
