--- a/index.html
+++ b/index.html
@@ -94,11 +94,11 @@
           </div>
           <div class="counters">
             <div class="counter">
-              <p class="counter-num">6</p>
-              <p class="counter-name">weeks experience</p>
+              <p class="counter-num">4</p>
+              <p class="counter-name">months experience</p>
             </div>
             <div class="counter">
-              <p class="counter-num">6</p>
+              <p class="counter-num">12</p>
               <p class="counter-name">Projects Done</p>
             </div>
           </div>
